# bumper

./: CHANGELOG.md  README.md  bumper.cabal  cabal.haskell-ci
.github/workflows/: haskell-ci.yml
src/: Bumper.hs  Config.hs  Package.hs  Version.hs
