cabal-version:       3.0
name:                bumper
version:             0.6.0.3
synopsis:            Automatically bump package versions, also transitively.
description:         Automatically bump package versions, also transitively.
                     .
                     Readme: <https://www.github.com/silkapp/bumper/blob/master/README.md>
author:              Silk
copyright:           (c) 2012, Silk
maintainer:          code@silk.co
homepage:            http://github.com/silkapp/bumper
category:            Development
license:             BSD-3-Clause
license-file:        LICENSE
build-type:          Simple

extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:              git
  location:          https://github.com/silkapp/bumper.git

executable bumper
  ghc-options:       -Wall
  hs-source-dirs:    src
  main-is:           Bumper.hs
  other-modules:
    Config
    Package
    Paths_bumper
    Version
  build-depends:
      base == 4.*
    , Cabal >= 3 && < 4
    , containers >= 0.4
    , lens >= 4.0 && < 5.4
    , process >= 1.0
    , regex-compat >= 0.93
    , split >= 0.1
