cabal-version:       3.4
name:                bumper
version:             0.6.0.3
synopsis:            Automatically bump package versions, also transitively.
description:         Automatically bump package versions, also transitively.
                     .
                     Readme: <https://www.github.com/silkapp/bumper/blob/master/README.md>
author:              Silk
copyright:           (c) 2012, Silk
maintainer:          Artem Pelenitsyn <a@pelenitsyn.top>
homepage:            http://github.com/ulysses4ever/bumper
category:            Development
license:             BSD-3-Clause
license-file:        LICENSE
build-type:          Simple
tested-with:
  GHC ==9.8.4
   || ==9.10.2

extra-doc-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:              git
  location:          https://github.com/ulysses4ever/bumper.git

executable bumper
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  main-is:           Bumper.hs
  other-modules:
    Config
    Package
    Paths_bumper
    Version
  autogen-modules:
    Paths_bumper
  build-depends:
      base == 4.*
    , Cabal >= 3 && < 4
    , containers >= 0.4 && <0.8
    , lens >= 4.0 && < 5.4
    , process >= 1.0 && <1.7
    , regex-compat >= 0.93 && <0.96
    , split >= 0.1 && <0.3
